# python-project-folder-structures

./: .coverage  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  conftest.py  pyproject.toml  setup.cfg
.tox/pytest/lib/python3.7/: abc.py  codecs.py  copyreg.py  importlib  lib-dynload  rlcompleter.py  sre_constants.py  tarfile.py  tempfile.py  warnings.py
.tox/python/lib/python3.7/: LICENSE.txt  config-3.7m-x86_64-linux-gnu  enum.py  ntpath.py  operator.py  reprlib.py
cli-structured/: setup.py  tox.ini
cli-structured/.tox/py37/include/: python3.7m
cli-structured/.tox/py37/lib/python3.7/: _bootlocale.py  base64.py  re.py  stat.py
cli-structured/.tox/python/: .tox-config1
cli-structured/.tox/python/lib/python3.7/: encodings  linecache.py  os.py  shutil.py  sre_parse.py  tokenize.py  types.py
cli-structured/.tox/unit-test/lib/python3.7/: __future__.py  _collections_abc.py  _weakrefset.py  (+12 more)
cli-structured/foo/: foo.py
cli-structured/foo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cli-structured/foo/tests/: test_foo.py
cli-structured/requirements/: common.txt  dev.txt
foo/: __init__.py
tasks/: __init__.py  actions.py  builders.py  constants.py  conventions.py  helpers.py  selectors.py  test.py  tests.py  validators.py
tasks.bkp/: __init__.py  autoformat.py  lint.py  test.py
tasks/autoformat/: constants.py  handlers.py
tasks/lint/: constants.py  handlers.py  validators.py
tasks/test/: constants.py  handlers.py  validators.py
tests/acceptance/: boo.feature
tests/acceptance/steps/: boo.py  common.py
tests/contract/: test_foo.py
(+9 files in other folders)
