[tool.poetry]
name = "python-project-folder-structures"
version = "0.1.0"
description = "A simple project to inspire my on the structure of other projects"
authors = ["odelucca <delucca@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3"
behave = "^1.2"
isort = "^4.3"
flake8 = "^3.7"
mypy = "^0.750.0"
pre-commit = "^1.20"
pytest-cov = "^2.8"
invoke = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
